compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_type_in_alias.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type IntMap = IllMap(Int, Int)"
---
error: Unknown type
  ┌─ /src/one/two.gleam:1:15
  │
1 │ type IntMap = IllMap(Int, Int)
  │               ^^^^^^^^^^^^^^^^

The type `IllMap` is not defined or imported in this module.
